{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 32,
  "lineage": "21615984-85ca-2481-65fa-4f5f1a8cddb5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "flask_app_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:096400694479:loadbalancer/app/flask-app-demo/175bd909f9f6698e",
            "arn_suffix": "app/flask-app-demo/175bd909f9f6698e",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "flask-app-demo-2109979974.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:096400694479:loadbalancer/app/flask-app-demo/175bd909f9f6698e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "flask-app-demo",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04ab787297008f632"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-8396beeb"
              },
              {
                "subnet_id": "subnet-958a29ee"
              },
              {
                "subnet_id": "subnet-cb69f087"
              }
            ],
            "subnets": [
              "subnet-8396beeb",
              "subnet-958a29ee",
              "subnet-cb69f087"
            ],
            "tags": {
              "Name": "flask-app-demo"
            },
            "tags_all": {
              "Name": "flask-app-demo"
            },
            "vpc_id": "vpc-a76c6ecf",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.flask_app_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "flask_app_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:096400694479:listener/app/flask-app-demo/175bd909f9f6698e/53215738f8c5f080",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:096400694479:targetgroup/flask-app-demo/219b17edda8d2ca4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:096400694479:listener/app/flask-app-demo/175bd909f9f6698e/53215738f8c5f080",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:096400694479:loadbalancer/app/flask-app-demo/175bd909f9f6698e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.flask_app_demo",
            "aws_lb_target_group.flask_app_demo",
            "aws_security_group.flask_app_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "flask_app_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:096400694479:targetgroup/flask-app-demo/219b17edda8d2ca4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:096400694479:listener-rule/app/flask-app-demo/175bd909f9f6698e/53215738f8c5f080/5e884715271e1115",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:096400694479:listener-rule/app/flask-app-demo/175bd909f9f6698e/53215738f8c5f080/5e884715271e1115",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:096400694479:listener/app/flask-app-demo/175bd909f9f6698e/53215738f8c5f080",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.flask_app_demo",
            "aws_lb_listener.flask_app_demo",
            "aws_lb_target_group.flask_app_demo",
            "aws_security_group.flask_app_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "flask_app_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:096400694479:targetgroup/flask-app-demo/219b17edda8d2ca4",
            "arn_suffix": "targetgroup/flask-app-demo/219b17edda8d2ca4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:096400694479:targetgroup/flask-app-demo/219b17edda8d2ca4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:096400694479:loadbalancer/app/flask-app-demo/175bd909f9f6698e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "flask-app-demo",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-a76c6ecf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "flask_app_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:096400694479:security-group/sg-04ab787297008f632",
            "description": "Allow inbound traffic to flask app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ab787297008f632",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "flask-app-demo",
            "name_prefix": "",
            "owner_id": "096400694479",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-a76c6ecf"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}